--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <mat-card-header>
         <div mat-card-avatar class="example-header-image-2"></div>
         <mat-card-title>Nouvelle découverte objet</mat-card-title>
-        <mat-card-subtitle>Administration</mat-card-subtitle>
+        <mat-card-subtitle>Modérateurs & Animateurs</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
         <form class="example-form" (submit)="decouverte_objet()" method="POST" id="test">
@@ -38,7 +38,7 @@
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>Nouvelle découverte</mat-card-title>
-        <mat-card-subtitle>Administration</mat-card-subtitle>
+        <mat-card-subtitle>Administrateurs seulement</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
         <form class="example-form" (submit)="decouverte()" method="POST" id="test">
@@ -70,7 +70,7 @@
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image-3"></div>
-        <mat-card-title>Nouvelle découverte collectionneur</mat-card-title>
+        <mat-card-title>Modérateurs & Animateurs</mat-card-title>
         <mat-card-subtitle>Administration</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
