--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,8 +70,8 @@
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image-3"></div>
-        <mat-card-title>Modérateurs & Animateurs</mat-card-title>
-        <mat-card-subtitle>Administration</mat-card-subtitle>
+        <mat-card-title>Découverte collectionneur</mat-card-title>
+        <mat-card-subtitle>Modérateurs & Animateurs </mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
         <form class="example-form" (submit)="collectionneur()" method="POST" id="test">
